add crud for ElogBook and Refactorize code
